--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 
 <body>
         <div id="app">
-                <h1>
-                        {{ message }}
-                </h1>
+                <ul>
+                        <li v-for="email in emails">
+                                {{email}}
+                        </li>
+                </ul>
         </div>
 
         <!-- BOOTSTRAP JS -->
